<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/hello_emma"
            android:textColor="@color/colorblack"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:text="@string/let_s_find_your_favourate_body_care_product"
            android:textColor="@color/colorblack" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="90dp"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="39dp"
            android:src="@drawable/imagee" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="282dp"
        android:layout_height="76dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rl1"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="65dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:padding="5dp"

            android:src="@drawable/ic_baseline_filter_list_24"
            app:layout_constraintEnd_toStartOf="@+id/cat_recycler"
            tools:layout_editor_absoluteY="135dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cat_recycler"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="18dp"
            android:padding="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorwhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/make_up"
            android:textColor="@color/colorgreen"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="487dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/body"
            android:textColor="@color/colorgreen"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="367dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/face"
            android:textColor="@color/colorgreen"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="247dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/hair"
            android:textColor="@color/colorgreen"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="138dp" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="38dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:src="@drawable/ic_baseline_search_"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="609dp" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_recycler"
        android:layout_width="0dp"
        android:layout_height="357dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <Button
        android:id="@+id/button"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/cart_button_bg"
        android:text="Your Cart is empty"
        android:textColor="@color/colorwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>